add nft mint with umi

--- a/prereq/ts/package.json
+++ b/prereq/ts/package.json
@@ -4,17 +4,25 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "keygen": "ts-node src/keygen.ts",
-    "airdrop": "ts-node src/airdrop.ts",
-    "transfer": "ts-node src/transfer.ts",
-    "enroll": "ts-node src/enroll.ts"
+    "keygen": "ts-node src/solbasic/keygen.ts",
+    "airdrop": "ts-node src/solbasic/airdrop.ts",
+    "transfer": "ts-node src/solbasic/transfer.ts",
+    "enroll": "ts-node src/solbasic/enroll.ts",
+    "spl_init": "ts-node src/mint/spl_init.ts"
   },
   "dependencies": {
     "@coral-xyz/anchor": "^0.30.1",
+    "@metaplex-foundation/mpl-token-metadata": "3.1.1",
+    "@metaplex-foundation/umi": "^0.8.10",
+    "@metaplex-foundation/umi-bundle-defaults":  "^0.8.10",
+    "@metaplex-foundation/umi-uploader-irys": "^0.10.0-beta.0",
+    "@solana/spl-token": "^0.3.9",
     "@solana/web3.js": "^1.95.3",
     "@types/node": "^22.7.5",
+    "@types/prompt": "^1.1.8",
     "bs58": "^6.0.0",
     "prompt-sync": "^4.2.0",
+    "prompt": "^1.3.0",
     "typescript": "^5.6.3"
   },
   "devDependencies": {
